--- a/wear/src/main/res/layout/round_activity_main.xml
+++ b/wear/src/main/res/layout/round_activity_main.xml
@@ -4,13 +4,14 @@
     android:layout_height="match_parent" tools:context=".MainActivity" tools:deviceIds="wear_round">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Activate Panic"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/activate_panic"
         android:id="@+id/panicButton"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        style="@style/Button.Red.Big" />
 
 </RelativeLayout>
