--- a/wear/src/main/res/values/colors.xml
+++ b/wear/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="dark_red">#B71C1C</color>
     <color name="green">#009688</color>
     <color name="light_gray">#BDBDBD</color>
-    <color name="dark_gray">#757575</color>
+    <color name="gray">#757575</color>
+    <color name="dark_gray">#424242</color>
 </resources>
