--- a/mobile/src/main/res/drawable/button_gray.xml
+++ b/mobile/src/main/res/drawable/button_gray.xml
@@ -3,7 +3,7 @@
     android:color="@color/dark_gray">
     <item>
         <shape
-            android:shape="oval">
+            android:shape="rectangle">
             <solid android:color="@color/gray" />
         </shape>
     </item>
