--- a/wear/src/main/res/drawable/button_red.xml
+++ b/wear/src/main/res/drawable/button_red.xml
@@ -3,7 +3,7 @@
     android:color="@color/dark_red">
     <item>
         <shape
-            android:shape="oval">
+            android:shape="rectangle">
             <solid android:color="@color/red" />
         </shape>
     </item>
