--- a/mobile/src/main/res/values-v21/styles.xml
+++ b/mobile/src/main/res/values-v21/styles.xml
@@ -4,11 +4,20 @@
         <item name="android:colorPrimary">@color/blue</item>
         <item name="android:colorPrimaryDark">@color/dark_blue</item>
         <item name="android:textColorPrimary">@color/light_blue</item>
-        <item name="android:navigationBarColor">@color/blue</item>
+    </style>
+
+    <style name="AppTheme.NoTitleBar" parent="AppTheme">
+        <item name="android:windowNoTitle">true</item>
     </style>
 
     <style name="Button" parent="android:Widget">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Link">
+        <item name="android:textColor">@color/light_blue</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:padding">10dip</item>
     </style>
 
     <style name="Button.Light_Blue" parent="Button">
@@ -37,5 +46,4 @@
         <item name="android:padding">20dip</item>
         <item name="android:textSize">22sp</item>
     </style>
-
 </resources>
